Deployment/k8s-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
